# shopify-app-index

./: .gitignore  README.md  crawler.py  pyproject.toml
shopify-crawler/: Dockerfile  cli.py  pyproject.toml
shopify-crawler/infra/: main.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  variables.tf
shopify-crawler/infra/.terraform/plugins/darwin_amd64/: lock.json
shopify-crawler/shopify_crawler/: config.py  crawler.py  datastore.py  model.py  utils.py
shopify-crawler/tests/: test_shopify_apps.py
shopify-frontend/: package.json
